syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_alertgroup;


message DsAlertGroup {

    int32 id= 1;
    optional string alert_instance_ids=2;
    optional int32 create_user_id= 3;
    optional string group_name= 4;
    optional string description= 5;
    optional string create_time= 6;
    optional string update_time= 7;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsAlertGroupService {
  rpc ListDsAlertGroups(ListDsAlertGroupsRequest) returns (ListDsAlertGroupsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsAlertGroups"
    };
  }

  rpc GetDsAlertGroup(GetDsAlertGroupRequest) returns (DsAlertGroup) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsAlertGroups/*}"
    };
  }

  rpc CreateDsAlertGroup(CreateDsAlertGroupRequest) returns (DsAlertGroup) {
    option (google.api.http) = {
      post: "/v1alpha1/DsAlertGroups"
      body: "DsAlertGroup"
    };
  }

  rpc UpdateDsAlertGroup(UpdateDsAlertGroupRequest) returns (DsAlertGroup) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsAlertGroup.name=DsAlertGroups/*}"
      body: "DsAlertGroup"
    };
  }

  rpc DeleteDsAlertGroup(DeleteDsAlertGroupRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsAlertGroups/*}"
    };
  }
  rpc VerifyAlertGroup(VerifyAlertGroupRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/DsAlertGroups/verify"
      body: "DsAlertGroup"
    };
  }
}
message VerifyAlertGroupRequest {
  string group_name=1 ;
}


// message DsAlertGroup {
// ! This should be defined elsewhere
// }

message ListDsAlertGroupsRequest {
    int64 page_size = 1;
    int64 page_num = 2;
    optional string search_val=3 ;
}

message ListDsAlertGroupsResponse {
  repeated DsAlertGroup total_list = 1;
  int64 current_page = 2;
  int64 page_size = 3;
  int64 start = 4;
  int64 total = 5;
  int64 total_page = 6;
}

message GetDsAlertGroupRequest {
  // The field will contain name of the resource requested.
  int32 id = 1;
}

message CreateDsAlertGroupRequest {
  optional string alert_instance_ids=2;
  optional int32 create_user_id= 3;
  optional string group_name= 4;
  optional string description= 5;
}

message UpdateDsAlertGroupRequest {
  int32 id= 1;
  optional string alert_instance_ids=2;
  optional int32 create_user_id= 3;
  optional string group_name= 4;
  optional string description= 5;
}

message DeleteDsAlertGroupRequest {
  // The resource name of the DsAlertGroup to be deleted.
  int32 id = 1;
}
